--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ influx.user=${INFLUXDB_USER}
 influx.password=${INFLUXDB_PASSWORD}
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.http.multipart.maxFileSize=100Mb
+spring.http.multipart.maxRequestSize=100Mb
